#PK-1164 Added asterik to required fields

--- a/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
@@ -73,7 +73,7 @@
                 <!-- Store Code -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["StoreName"]</label>
+                        <label class="form-label required">@L["StoreName"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
@@ -90,7 +90,7 @@
                 <!-- Hash Key -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["HashKey"]</label>
+                        <label class="form-label required">@L["HashKey"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
@@ -107,7 +107,7 @@
                 <!-- Hash IV -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["HashIV"]</label>
+                        <label class="form-label required">@L["HashIV"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
@@ -124,7 +124,7 @@
                 <!-- Display Invoice Name -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["InvoiceNameDisplay"]</label>
+                        <label class="form-label required">@L["InvoiceNameDisplay"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
@@ -141,7 +141,7 @@
                 <!-- Days After Shipment -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["DaysAfterShipmentToGenerateInvoice"]</label>
+                        <label class="form-label required">@L["DaysAfterShipmentToGenerateInvoice"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
@@ -161,7 +161,7 @@
                 <!-- Status On Invoice Issue -->
                 <div class="col-12 row mb-3">
                     <div class="col-3 text-lg-end pt-2">
-                        <label>@L["StatusOnInvoiceIssue"]</label>
+                        <label class="form-label required">@L["StatusOnInvoiceIssue"]</label>
                     </div>
                     <div class="col-9">
                         <Validation>
