--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -609,3 +609,8 @@
     .b-table .btn-link.hyperlink.fs-large {
         font-size: 1rem !important;
     }
+
+.form-label.required::after {
+    content: ' *';
+    color: crimson;
+}
