--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -215,6 +215,29 @@
                     </Dropdown>
                 }
             }
+            else if(SelectedTabName is "All")
+            {
+              @if ((Orders.Where(x => x.IsSelected && x.ShippingStatus==ShippingStatus.ToBeShipped ).Count() < 1))
+                {
+                    <Dropdown Disabled>
+                        <Button Size="Size.ExtraSmall" Disabled class="btn btn-sm btn-primary" @onclick="OnPrintShippedLabel">@L["StandardPrinting"]</Button>
+                        <DropdownToggle Size="Size.ExtraSmall" Class="btn-sm" Color="Color.Primary" Split />
+                        <DropdownMenu>
+                            <DropdownItem>Action</DropdownItem>
+                        </DropdownMenu>
+                    </Dropdown>
+                }
+                else
+                {
+                    <Dropdown>
+                        <Button Size="Size.ExtraSmall" class="btn btn-sm btn-primary" Clicked="OnPrintShippedLabel">@L["StandardPrinting"]</Button>
+                        <DropdownToggle Size="Size.ExtraSmall" Class="btn-sm" Color="Color.Primary" Split />
+                        <DropdownMenu>
+                            <DropdownItem Clicked="OnPrintShippedLabel10Cm">@L["ThermalPrinting"]</DropdownItem>
+                        </DropdownMenu>
+                    </Dropdown>
+                }
+            }
             @if (SelectedTabName is PikachuResource.PrepareShipment)
             {
                 @if (Orders.Where(x => x.IsSelected).Count() < 1)
