--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -217,7 +217,8 @@
             }
             else if(SelectedTabName is "All")
             {
-              @if ((Orders.Where(x => x.IsSelected && x.ShippingStatus==ShippingStatus.ToBeShipped ).Count() < 1))
+           @if (!Orders.Any(x => x.IsSelected && x.ShippingStatus == ShippingStatus.ToBeShipped) 
+    || Orders.Where(x => x.IsSelected && x.ShippingStatus == ShippingStatus.ToBeShipped).Select(x => x.DeliveryMethod).Distinct().Count() > 1)
                 {
                     <Dropdown Disabled>
                         <Button Size="Size.ExtraSmall" Disabled class="btn btn-sm btn-primary" @onclick="OnPrintShippedLabel">@L["StandardPrinting"]</Button>
